--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Index - FlexStart Bootstrap Template</title>
-  <meta name="description" content="">
-  <meta name="keywords" content="">
+  <title>BizzNist | Website & App Development | SEO & Digital Marketing Services</title>
+  <meta name="description" content="BizzNist provides expert website development, app development, SEO, digital marketing, and advertisement management services. Get high-performance websites & apps built for your business success.">
+  <meta name="keywords" content="website development services, app development company, best SEO agency, digital marketing services, WordPress development, Shopify experts, business website design, mobile app testing, PPC management">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
@@ -119,10 +119,10 @@
       <div class="container">
         <div class="row gy-4">
           <div class="col-lg-6 order-2 order-lg-1 d-flex flex-column justify-content-center">
-            <h1 data-aos="fade-up">We offer modern solutions for growing your business</h1>
-            <p data-aos="fade-up" data-aos-delay="100">We are team of talented designers making websites with Bootstrap</p>
+            <h1 data-aos="fade-up">BizzNist - Your One-Stop IT Solution for Websites, Apps & Digital Growth!</h1>
+            <p data-aos="fade-up" data-aos-delay="100">Empowering businesses with expert Website Development, App Development, SEO, and Digital Marketing solutions.</p>
             <div class="d-flex flex-column flex-md-row" data-aos="fade-up" data-aos-delay="200">
-              <a href="#about" class="btn-get-started">Get Started <i class="bi bi-arrow-right"></i></a>
+              <a href="#about" class="btn-get-started">Explore Services <i class="bi bi-arrow-right"></i></a>
               <a href="https://www.youtube.com/watch?v=Y7f98aduVJ8" class="glightbox btn-watch-video d-flex align-items-center justify-content-center ms-0 ms-md-4 mt-4 mt-md-0"><i class="bi bi-play-circle"></i><span>Watch Video</span></a>
             </div>
           </div>
