--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
       <div class="container">
         <div class="row gy-4">
           <div class="col-lg-6 order-2 order-lg-1 d-flex flex-column justify-content-center">
-            <h1 data-aos="fade-up">BizzNist - Your One-Stop IT Solution for Websites, Apps & Digital Growth!</h1>
+            <h1 data-aos="fade-up">One-Stop IT Solution for Websites, Apps & Digital Growth!</h1>
             <p data-aos="fade-up" data-aos-delay="100">Empowering businesses with expert Website Development, App Development, SEO, and Digital Marketing solutions.</p>
             <div class="d-flex flex-column flex-md-row" data-aos="fade-up" data-aos-delay="200">
               <a href="#about" class="btn-get-started">Explore Services <i class="bi bi-arrow-right"></i></a>
