--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
               <h3>Who We Are</h3>
               <h2>Expertise in: Website & App Development | SEO & Ads Management | UI/UX & Testing</h2>
               <p>
-                At BizzNist, we are a team of IT experts dedicated to transforming businesses with custom website development, mobile app solutions, SEO, and digital marketing. Whether you're a startup or an established brand, we provide scalable, high-performance solutions to help you grow online.
+                At BizzNist, we are a team of IT experts dedicated to transforming businesses with website development, mobile app solutions, SEO, and digital marketing. Whether you're a startup or an established brand, we provide scalable, high-performance solutions to help you grow online.
               </p>
               <div class="text-center text-lg-start">
                 <a href="#" class="btn-read-more d-inline-flex align-items-center justify-content-center align-self-center">
