--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             <h1 data-aos="fade-up">One-Stop IT Solution for Websites, Apps & Digital Growth!</h1>
             <p data-aos="fade-up" data-aos-delay="100">Empowering businesses with expert Website Development, App Development, SEO, and Digital Marketing solutions.</p>
             <div class="d-flex flex-column flex-md-row" data-aos="fade-up" data-aos-delay="200">
-              <a href="#about" class="btn-get-started">Explore Services <i class="bi bi-arrow-right"></i></a>
+              <a href="#services" class="btn-get-started">Explore Services <i class="bi bi-arrow-right"></i></a>
               <!-- <a href="https://www.youtube.com/watch?v=Y7f98aduVJ8" class="glightbox btn-watch-video d-flex align-items-center justify-content-center ms-0 ms-md-4 mt-4 mt-md-0"><i class="bi bi-play-circle"></i><span>Watch Video</span></a> -->
             </div>
           </div>
