--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
             <div class="service-item item-cyan position-relative">
               <i class="bi bi-activity icon"></i>
               <h3>Website Development</h3>
-              <p>Expert development on WordPress, Shopify, Wix, and Static Pages for business, portfolio, e-commerce, and news websites.</p>
+              <p>Custom-built websites for businesses and individuals, designed for performance, scalability, and user engagement.</p>
               <a href="#" class="read-more stretched-link"><span>Read More</span> <i class="bi bi-arrow-right"></i></a>
             </div>
           </div><!-- End Service Item -->
@@ -430,8 +430,8 @@
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="200">
             <div class="service-item item-orange position-relative">
               <i class="bi bi-broadcast icon"></i>
-              <h3>App Development</h3>
-              <p>Scalable Android & iOS applications, including, hybrid, and native solutions tailored to your business needs.</p>
+              <h3>Advertisement Management</h3>
+              <p>End-to-end campaign management across Google Ads, social media, and PPC platforms for maximum ROI.</p>
               <a href="#" class="read-more stretched-link"><span>Read More</span> <i class="bi bi-arrow-right"></i></a>
             </div>
           </div><!-- End Service Item -->
@@ -448,8 +448,8 @@
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="400">
             <div class="service-item item-red position-relative">
               <i class="bi bi-bounding-box-circles icon"></i>
-              <h3>Advertisement Management</h3>
-              <p>Data-driven campaigns across Google Ads, Facebook Ads, PPC, and social media platforms for maximum ROI.</p>
+              <h3>Domain & Hosting Solutions</h3>
+              <p>Comprehensive domain registration, hosting setup, and website maintenance for a hassle-free online presence.</p>
               <a href="#" class="read-more stretched-link"><span>Read More</span> <i class="bi bi-arrow-right"></i></a>
             </div>
           </div><!-- End Service Item -->
@@ -457,8 +457,8 @@
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="500">
             <div class="service-item item-indigo position-relative">
               <i class="bi bi-calendar4-week icon"></i>
-              <h3>App & Website Testing</h3>
-              <p>Comprehensive bug detection, performance optimization, and UX audits to ensure seamless functionality.</p>
+              <h3>Corporate Training & Technical Documentation</h3>
+              <p>Specialized training programs and structured technical documentation to support business operations.</p>
               <a href="#" class="read-more stretched-link"><span>Read More</span> <i class="bi bi-arrow-right"></i></a>
             </div>
           </div><!-- End Service Item -->
@@ -466,8 +466,8 @@
           <div class="col-lg-4 col-md-6" data-aos="fade-up" data-aos-delay="600">
             <div class="service-item item-pink position-relative">
               <i class="bi bi-chat-square-text icon"></i>
-              <h3>Additional IT Services</h3>
-              <p>UI/UX design, domain & hosting solutions, website maintenance, and ongoing tech support for long-term success.</p>
+              <h3>Data Migration & IT Consulting</h3>
+              <p>Secure and efficient data transition with expert consulting to streamline your IT infrastructure.</p>
               <a href="#" class="read-more stretched-link"><span>Read More</span> <i class="bi bi-arrow-right"></i></a>
             </div>
           </div><!-- End Service Item -->
