--- a/index.html
+++ b/index.html
@@ -1053,8 +1053,8 @@
                 <div class="info-item" data-aos="fade" data-aos-delay="200">
                   <i class="bi bi-geo-alt"></i>
                   <h3>Address</h3>
-                  <p>A108 Adam Street</p>
-                  <p>New York, NY 535022</p>
+                  <p>Ghaziabad </p>
+                  <p>Uttar Pradesh, India, 201002</p>
                 </div>
               </div><!-- End Info Item -->
 
@@ -1062,8 +1062,7 @@
                 <div class="info-item" data-aos="fade" data-aos-delay="300">
                   <i class="bi bi-telephone"></i>
                   <h3>Call Us</h3>
-                  <p>+1 5589 55488 55</p>
-                  <p>+1 6678 254445 41</p>
+                  <p>+91 9210481163</p>
                 </div>
               </div><!-- End Info Item -->
 
@@ -1071,8 +1070,7 @@
                 <div class="info-item" data-aos="fade" data-aos-delay="400">
                   <i class="bi bi-envelope"></i>
                   <h3>Email Us</h3>
-                  <p>info@example.com</p>
-                  <p>contact@example.com</p>
+                  <p>contact@bizznist.com</p>
                 </div>
               </div><!-- End Info Item -->
 
@@ -1081,7 +1079,7 @@
                   <i class="bi bi-clock"></i>
                   <h3>Open Hours</h3>
                   <p>Monday - Friday</p>
-                  <p>9:00AM - 05:00PM</p>
+                  <p>10:00AM - 06:00PM</p>
                 </div>
               </div><!-- End Info Item -->
 
