--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Our Values</h2>
-        <p>What we value most<br></p>
+        <p>Our Core Values<br></p>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -180,24 +180,24 @@
           <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
             <div class="card">
               <img src="assets/img/values-1.png" class="img-fluid" alt="">
-              <h3>Ad cupiditate sed est odio</h3>
-              <p>Eum ad dolor et. Autem aut fugiat debitis voluptatem consequuntur sit. Et veritatis id.</p>
+              <h3>Client-Centric Innovation</h3>
+              <p>We craft tailored digital solutions that drive business success and adapt to evolving needs.</p>
             </div>
           </div><!-- End Card Item -->
 
           <div class="col-lg-4" data-aos="fade-up" data-aos-delay="200">
             <div class="card">
               <img src="assets/img/values-2.png" class="img-fluid" alt="">
-              <h3>Voluptatem voluptatum alias</h3>
-              <p>Repudiandae amet nihil natus in distinctio suscipit id. Doloremque ducimus ea sit non.</p>
+              <h3>Integrity & Transparency</h3>
+              <p>We uphold ethical business practices, ensuring honesty, clarity, and trust in every interaction.</p>
             </div>
           </div><!-- End Card Item -->
 
           <div class="col-lg-4" data-aos="fade-up" data-aos-delay="300">
             <div class="card">
               <img src="assets/img/values-3.png" class="img-fluid" alt="">
-              <h3>Fugit cupiditate alias nobis.</h3>
-              <p>Quam rem vitae est autem molestias explicabo debitis sint. Vero aliquid quidem commodi.</p>
+              <h3>Excellence & Reliability</h3>
+              <p>We are committed to delivering high-quality, scalable solutions with ongoing support for long-term growth.</p>
             </div>
           </div><!-- End Card Item -->
 
