--- a/index.html
+++ b/index.html
@@ -783,12 +783,12 @@
     <!-- <section id="team" class="team section">
 
       <!-- Section Title -->
-      <div class="container section-title" data-aos="fade-up">
+<!--      <div class="container section-title" data-aos="fade-up">
         <h2>Team</h2>
         <p>Our hard working team</p>
       </div><!-- End Section Title -->
 
-      <div class="container">
+<!--      <div class="container">
 
         <div class="row gy-4">
 
@@ -810,8 +810,8 @@
               </div>
             </div>
           </div><!-- End Team Member --> 
--->
 
+<!--
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
             <div class="team-member">
               <div class="member-img">
@@ -830,7 +830,7 @@
               </div>
             </div>
           </div><!-- End Team Member -->
-
+<!--
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="300">
             <div class="team-member">
               <div class="member-img">
@@ -849,7 +849,7 @@
               </div>
             </div>
           </div><!-- End Team Member -->
-
+<!--
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="400">
             <div class="team-member">
               <div class="member-img">
@@ -869,9 +869,10 @@
             </div>
           </div><!-- End Team Member -->
 
-        </div>
+        </div> 
 
-      </div>
+      </div> 
+
 
     </section><!-- /Team Section -->
 
