--- a/index.html
+++ b/index.html
@@ -1055,44 +1055,44 @@
       <div class="row gy-4">
         <div class="col-lg-4 col-md-6 footer-about">
           <a href="index.html" class="d-flex align-items-center">
-            <span class="sitename">FlexStart</span>
+            <span class="sitename">BizzNist</span>
           </a>
           <div class="footer-contact pt-3">
-            <p>A108 Adam Street</p>
-            <p>New York, NY 535022</p>
-            <p class="mt-3"><strong>Phone:</strong> <span>+1 5589 55488 55</span></p>
-            <p><strong>Email:</strong> <span>info@example.com</span></p>
+            <p>Ghaziabad</p>
+            <p>Uttar Pradesh, India, 201002</p>
+            <p class="mt-3"><strong>Phone:</strong> <span>+91 9210481163</span></p>
+            <p><strong>Email:</strong> <span>contact@bizznist.com</span></p>
           </div>
         </div>
 
         <div class="col-lg-2 col-md-3 footer-links">
           <h4>Useful Links</h4>
           <ul>
-            <li><i class="bi bi-chevron-right"></i> <a href="#">Home</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="#">About us</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="#">Services</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="#">Terms of service</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="/">Home</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="/about-us">About us</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="/services">Services</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="/terms-of-service">Terms of service</a></li>
           </ul>
         </div>
 
         <div class="col-lg-2 col-md-3 footer-links">
           <h4>Our Services</h4>
           <ul>
-            <li><i class="bi bi-chevron-right"></i> <a href="#">Web Design</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="#">Web Development</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="#">Product Management</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="#">Marketing</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="/website-development">Website Development</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="/seo-and-digital-marketing">SEO & Digital Marketing</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="/corporate-training-and-technical-documentation">Corporate Training & Technical Documentation</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="/data-migration-and-it-consulting">Data Migration & IT Consulting</a></li>
           </ul>
         </div>
 
         <div class="col-lg-4 col-md-12">
           <h4>Follow Us</h4>
-          <p>Cras fermentum odio eu feugiat lide par naso tierra videa magna derita valies</p>
+          <p>Stay Connected. Stay Ahead. Follow Us for the Latest Updates</p>
           <div class="social-links d-flex">
-            <a href=""><i class="bi bi-twitter-x"></i></a>
-            <a href=""><i class="bi bi-facebook"></i></a>
-            <a href=""><i class="bi bi-instagram"></i></a>
-            <a href=""><i class="bi bi-linkedin"></i></a>
+            <!-- <a href=""><i class="bi bi-twitter-x"></i></a> -->
+            <!-- <a href=""><i class="bi bi-facebook"></i></a> -->
+            <!-- <a href=""><i class="bi bi-instagram"></i></a> -->
+            <a href="https://www.linkedin.com/company/bizznist/"><i class="bi bi-linkedin"></i></a>
           </div>
         </div>
 
@@ -1100,13 +1100,13 @@
     </div>
 
     <div class="container copyright text-center mt-4">
-      <p>© <span>Copyright</span> <strong class="px-1 sitename">FlexStart</strong> <span>All Rights Reserved</span></p>
+      <p>©2025 <span>Copyright</span> <strong class="px-1 sitename">BizzNist</strong> <span>All Rights Reserved</span></p>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you've purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        Designed by <a href="/">BizzNist</a>
       </div>
     </div>
 
