--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                 At BizzNist, we are a team of IT experts dedicated to transforming businesses with website development, mobile app solutions, SEO, and digital marketing. Whether you're a startup or an established brand, we provide scalable, high-performance solutions to help you grow online.
               </p>
               <div class="text-center text-lg-start">
-                <a href="#" class="btn-read-more d-inline-flex align-items-center justify-content-center align-self-center">
+                <a href="/about-us" class="btn-read-more d-inline-flex align-items-center justify-content-center align-self-center">
                   <span>Read More</span>
                   <i class="bi bi-arrow-right"></i>
                 </a>
