--- a/index.html
+++ b/index.html
@@ -570,15 +570,15 @@
     </section><!-- /Pricing Section -->
 
     <!-- Faq Section -->
-    <section id="faq" class="faq section">
+<!--    <section id="faq" class="faq section"> -->
 
       <!-- Section Title -->
-      <div class="container section-title" data-aos="fade-up">
+<!--      <div class="container section-title" data-aos="fade-up">
         <h2>F.A.Q</h2>
         <p>Frequently Asked Questions</p>
       </div><!-- End Section Title -->
 
-      <div class="container">
+ <!--     <div class="container">
 
         <div class="row">
 
@@ -594,7 +594,7 @@
                 <i class="faq-toggle bi bi-chevron-right"></i>
               </div><!-- End Faq item-->
 
-              <div class="faq-item">
+<!--              <div class="faq-item">
                 <h3>Feugiat scelerisque varius morbi enim nunc faucibus a pellentesque?</h3>
                 <div class="faq-content">
                   <p>Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi. Id interdum velit laoreet id donec ultrices. Fringilla phasellus faucibus scelerisque eleifend donec pretium. Est pellentesque elit ullamcorper dignissim. Mauris ultrices eros in cursus turpis massa tincidunt dui.</p>
@@ -602,7 +602,7 @@
                 <i class="faq-toggle bi bi-chevron-right"></i>
               </div><!-- End Faq item-->
 
-              <div class="faq-item">
+<!--              <div class="faq-item">
                 <h3>Dolor sit amet consectetur adipiscing elit pellentesque?</h3>
                 <div class="faq-content">
                   <p>Eleifend mi in nulla posuere sollicitudin aliquam ultrices sagittis orci. Faucibus pulvinar elementum integer enim. Sem nulla pharetra diam sit amet nisl suscipit. Rutrum tellus pellentesque eu tincidunt. Lectus urna duis convallis convallis tellus. Urna molestie at elementum eu facilisis sed odio morbi quis</p>
@@ -610,11 +610,11 @@
                 <i class="faq-toggle bi bi-chevron-right"></i>
               </div><!-- End Faq item-->
 
-            </div>
+<!--            </div>
 
           </div><!-- End Faq Column-->
 
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
+<!--          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
 
             <div class="faq-container">
 
@@ -626,7 +626,7 @@
                 <i class="faq-toggle bi bi-chevron-right"></i>
               </div><!-- End Faq item-->
 
-              <div class="faq-item">
+<!--              <div class="faq-item">
                 <h3>Tempus quam pellentesque nec nam aliquam sem et tortor consequat?</h3>
                 <div class="faq-content">
                   <p>Molestie a iaculis at erat pellentesque adipiscing commodo. Dignissim suspendisse in est ante in. Nunc vel risus commodo viverra maecenas accumsan. Sit amet nisl suscipit adipiscing bibendum est. Purus gravida quis blandit turpis cursus in</p>
@@ -634,7 +634,7 @@
                 <i class="faq-toggle bi bi-chevron-right"></i>
               </div><!-- End Faq item-->
 
-              <div class="faq-item">
+<!--              <div class="faq-item">
                 <h3>Perspiciatis quod quo quos nulla quo illum ullam?</h3>
                 <div class="faq-content">
                   <p>Enim ea facilis quaerat voluptas quidem et dolorem. Quis et consequatur non sed in suscipit sequi. Distinctio ipsam dolore et.</p>
@@ -642,15 +642,16 @@
                 <i class="faq-toggle bi bi-chevron-right"></i>
               </div><!-- End Faq item-->
 
-            </div>
+<!--            </div>
 
           </div><!-- End Faq Column-->
 
-        </div>
+<!--        </div>
 
       </div>
 
     </section><!-- /Faq Section -->
+
 
     <!-- Testimonials Section -->
     <section id="testimonials" class="testimonials section">
