--- a/index.html
+++ b/index.html
@@ -233,15 +233,15 @@
     </section><!-- /Stats Section -->
 
     <!-- Features Section -->
-    <section id="features" class="features section">
+<!--    <section id="features" class="features section">
 
       <!-- Section Title -->
-      <div class="container section-title" data-aos="fade-up">
+<!--      <div class="container section-title" data-aos="fade-up">
         <h2>Features</h2>
         <p>Our Advacedd Features<br></p>
       </div><!-- End Section Title -->
 
-      <div class="container">
+    <!--  <div class="container">
 
         <div class="row gy-5">
 
@@ -259,42 +259,42 @@
                 </div>
               </div><!-- End Feature Item -->
 
-              <div class="col-md-6" data-aos="fade-up" data-aos-delay="300">
+   <!--           <div class="col-md-6" data-aos="fade-up" data-aos-delay="300">
                 <div class="feature-box d-flex align-items-center">
                   <i class="bi bi-check"></i>
                   <h3>Facilis neque ipsa</h3>
                 </div>
               </div><!-- End Feature Item -->
 
-              <div class="col-md-6" data-aos="fade-up" data-aos-delay="400">
+   <!--           <div class="col-md-6" data-aos="fade-up" data-aos-delay="400">
                 <div class="feature-box d-flex align-items-center">
                   <i class="bi bi-check"></i>
                   <h3>Volup amet volupt</h3>
                 </div>
               </div><!-- End Feature Item -->
 
-              <div class="col-md-6" data-aos="fade-up" data-aos-delay="500">
+   <!--           <div class="col-md-6" data-aos="fade-up" data-aos-delay="500">
                 <div class="feature-box d-flex align-items-center">
                   <i class="bi bi-check"></i>
                   <h3>Rerum omnis sint</h3>
                 </div>
               </div><!-- End Feature Item -->
 
-              <div class="col-md-6" data-aos="fade-up" data-aos-delay="600">
+  <!--            <div class="col-md-6" data-aos="fade-up" data-aos-delay="600">
                 <div class="feature-box d-flex align-items-center">
                   <i class="bi bi-check"></i>
                   <h3>Alias possimus</h3>
                 </div>
               </div><!-- End Feature Item -->
 
-              <div class="col-md-6" data-aos="fade-up" data-aos-delay="700">
+   <!--           <div class="col-md-6" data-aos="fade-up" data-aos-delay="700">
                 <div class="feature-box d-flex align-items-center">
                   <i class="bi bi-check"></i>
                   <h3>Repellendus molli</h3>
                 </div>
               </div><!-- End Feature Item -->
 
-            </div>
+ <!--           </div>
           </div>
 
         </div>
@@ -304,7 +304,7 @@
     </section><!-- /Features Section -->
 
     <!-- Alt Features Section -->
-    <section id="alt-features" class="alt-features section">
+   <!-- <section id="alt-features" class="alt-features section">
 
       <div class="container">
 
@@ -322,7 +322,7 @@
                 </div>
               </div><!-- End Feature Item -->
 
-              <div class="col-md-6 icon-box">
+     <!--         <div class="col-md-6 icon-box">
                 <i class="bi bi-card-checklist"></i>
                 <div>
                   <h4>Ullamco laboris nisi</h4>
@@ -330,7 +330,7 @@
                 </div>
               </div><!-- End Feature Item -->
 
-              <div class="col-md-6 icon-box">
+  <!--            <div class="col-md-6 icon-box">
                 <i class="bi bi-dribbble"></i>
                 <div>
                   <h4>Labore consequatur</h4>
@@ -338,7 +338,7 @@
                 </div>
               </div><!-- End Feature Item -->
 
-              <div class="col-md-6 icon-box">
+  <!--            <div class="col-md-6 icon-box">
                 <i class="bi bi-filter-circle"></i>
                 <div>
                   <h4>Beatae veritatis</h4>
@@ -346,7 +346,7 @@
                 </div>
               </div><!-- End Feature Item -->
 
-              <div class="col-md-6 icon-box">
+  <!--            <div class="col-md-6 icon-box">
                 <i class="bi bi-lightning-charge"></i>
                 <div>
                   <h4>Molestiae dolor</h4>
@@ -354,7 +354,7 @@
                 </div>
               </div><!-- End Feature Item -->
 
-              <div class="col-md-6 icon-box">
+    <!--          <div class="col-md-6 icon-box">
                 <i class="bi bi-patch-check"></i>
                 <div>
                   <h4>Explicabo consectetur</h4>
@@ -362,7 +362,7 @@
                 </div>
               </div><!-- End Feature Item -->
 
-            </div>
+ <!--           </div>
 
           </div>
 
