--- a/index.html
+++ b/index.html
@@ -1007,7 +1007,7 @@
 
   <footer id="footer" class="footer">
 
-    <div class="footer-newsletter">
+<!--    <div class="footer-newsletter">
       <div class="container">
         <div class="row justify-content-center text-center">
           <div class="col-lg-6">
@@ -1022,12 +1022,12 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <div class="container footer-top">
       <div class="row gy-4">
         <div class="col-lg-4 col-md-6 footer-about">
-          <a href="index.html" class="d-flex align-items-center">
+          <a href="/" class="d-flex align-items-center">
             <span class="sitename">BizzNist</span>
           </a>
           <div class="footer-contact pt-3">
