--- a/index.html
+++ b/index.html
@@ -917,7 +917,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Contact</h2>
-        <p>Contact Us</p>
+        <p>Let's Build Something Amazing Together!</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -939,7 +939,7 @@
               <div class="col-md-6">
                 <div class="info-item" data-aos="fade" data-aos-delay="300">
                   <i class="bi bi-telephone"></i>
-                  <h3>Call Us</h3>
+                  <h3>Call for quick inquiries</h3>
                   <p>+91 9210481163</p>
                 </div>
               </div><!-- End Info Item -->
