--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>BizzNist | Website & App Development | SEO & Digital Marketing Services</title>
   <meta name="description" content="BizzNist provides expert website development, app development, SEO, digital marketing, and advertisement management services. Get high-performance websites & apps built for your business success.">
-  <meta name="keywords" content="website development services, app development company, best SEO agency, digital marketing services, WordPress development, Shopify experts, business website design, mobile app testing, PPC management">
+  <meta name="keywords" content="website development services, app development company, best SEO agency, digital marketing services, WordPress development, Shopify experts, business website design, mobile app testing, PPC management, IT services, advertisement management, BizzNist">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
