--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
       <div class="container">
         <div class="row gy-4">
           <div class="col-lg-6 order-2 order-lg-1 d-flex flex-column justify-content-center">
-            <h1 data-aos="fade-up">One-Stop IT Solution for Websites, Apps & Digital Growth!</h1>
-            <p data-aos="fade-up" data-aos-delay="100">Empowering businesses with expert Website Development, App Development, SEO, and Digital Marketing solutions.</p>
+            <h1 data-aos="fade-up">Transforming Your Digital Presence with Expert IT Solutions</h1>
+            <p data-aos="fade-up" data-aos-delay="100">Comprehensive services tailored to your business needs.</p>
             <div class="d-flex flex-column flex-md-row" data-aos="fade-up" data-aos-delay="200">
               <a href="#services" class="btn-get-started">Explore Services <i class="bi bi-arrow-right"></i></a>
               <!-- <a href="https://www.youtube.com/watch?v=Y7f98aduVJ8" class="glightbox btn-watch-video d-flex align-items-center justify-content-center ms-0 ms-md-4 mt-4 mt-md-0"><i class="bi bi-play-circle"></i><span>Watch Video</span></a> -->
@@ -233,15 +233,15 @@
     </section><!-- /Stats Section -->
 
     <!-- Features Section -->
-<!--    <section id="features" class="features section">
+  <section id="features" class="features section">
 
       <!-- Section Title -->
-<!--      <div class="container section-title" data-aos="fade-up">
+    <div class="container section-title" data-aos="fade-up">
         <h2>Features</h2>
         <p>Our Advacedd Features<br></p>
       </div><!-- End Section Title -->
 
-    <!--  <div class="container">
+      <div class="container">
 
         <div class="row gy-5">
 
@@ -259,42 +259,42 @@
                 </div>
               </div><!-- End Feature Item -->
 
-   <!--           <div class="col-md-6" data-aos="fade-up" data-aos-delay="300">
+          <div class="col-md-6" data-aos="fade-up" data-aos-delay="300">
                 <div class="feature-box d-flex align-items-center">
                   <i class="bi bi-check"></i>
                   <h3>Facilis neque ipsa</h3>
                 </div>
               </div><!-- End Feature Item -->
 
-   <!--           <div class="col-md-6" data-aos="fade-up" data-aos-delay="400">
+           <div class="col-md-6" data-aos="fade-up" data-aos-delay="400">
                 <div class="feature-box d-flex align-items-center">
                   <i class="bi bi-check"></i>
                   <h3>Volup amet volupt</h3>
                 </div>
               </div><!-- End Feature Item -->
 
-   <!--           <div class="col-md-6" data-aos="fade-up" data-aos-delay="500">
+         <div class="col-md-6" data-aos="fade-up" data-aos-delay="500">
                 <div class="feature-box d-flex align-items-center">
                   <i class="bi bi-check"></i>
                   <h3>Rerum omnis sint</h3>
                 </div>
               </div><!-- End Feature Item -->
 
-  <!--            <div class="col-md-6" data-aos="fade-up" data-aos-delay="600">
+         <div class="col-md-6" data-aos="fade-up" data-aos-delay="600">
                 <div class="feature-box d-flex align-items-center">
                   <i class="bi bi-check"></i>
                   <h3>Alias possimus</h3>
                 </div>
               </div><!-- End Feature Item -->
 
-   <!--           <div class="col-md-6" data-aos="fade-up" data-aos-delay="700">
+             <div class="col-md-6" data-aos="fade-up" data-aos-delay="700">
                 <div class="feature-box d-flex align-items-center">
                   <i class="bi bi-check"></i>
                   <h3>Repellendus molli</h3>
                 </div>
               </div><!-- End Feature Item -->
 
- <!--           </div>
+            </div>
           </div>
 
         </div>
@@ -382,7 +382,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Services</h2>
-        <p>What We Offer<br></p>
+        <p>Our Services<br></p>
       </div><!-- End Section Title -->
 
       <div class="container">
