--- a/index.html
+++ b/index.html
@@ -152,24 +152,56 @@
           <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
             <div class="card">
               <img src="assets/img/values-1.png" class="img-fluid" alt="">
-              <h3>Client-Centric Innovation</h3>
-              <p>We craft tailored digital solutions that drive business success and adapt to evolving needs.</p>
+              <h3>Expertise Across Platforms</h3>
+              <p>We specialize in WordPress, Shopify, Wix, and custom development, delivering tailored solutions for every need.</p>
             </div>
           </div><!-- End Card Item -->
 
           <div class="col-lg-4" data-aos="fade-up" data-aos-delay="200">
             <div class="card">
               <img src="assets/img/values-2.png" class="img-fluid" alt="">
-              <h3>Integrity & Transparency</h3>
-              <p>We uphold ethical business practices, ensuring honesty, clarity, and trust in every interaction.</p>
+              <h3>Client-Centric Approach</h3>
+              <p>Your business goals are our priority. We ensure customized strategies that align with your vision.</p>
             </div>
           </div><!-- End Card Item -->
 
           <div class="col-lg-4" data-aos="fade-up" data-aos-delay="300">
             <div class="card">
               <img src="assets/img/values-3.png" class="img-fluid" alt="">
-              <h3>Excellence & Reliability</h3>
-              <p>We are committed to delivering high-quality, scalable solutions with ongoing support for long-term growth.</p>
+              <h3>Proven Track Record</h3>
+              <p>From startups to enterprises, we’ve helped businesses scale with our reliable IT services.</p>
+            </div>
+          </div><!-- End Card Item -->
+
+        </div>
+
+      </div>
+
+      <div class="container">
+
+        <div class="row gy-4">
+
+          <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
+            <div class="card">
+              <img src="assets/img/values-1.png" class="img-fluid" alt="">
+              <h3>Expertise Across Platforms</h3>
+              <p>We specialize in WordPress, Shopify, Wix, and custom development, delivering tailored solutions for every need.</p>
+            </div>
+          </div><!-- End Card Item -->
+
+          <div class="col-lg-4" data-aos="fade-up" data-aos-delay="200">
+            <div class="card">
+              <img src="assets/img/values-2.png" class="img-fluid" alt="">
+              <h3>Client-Centric Approach</h3>
+              <p>Your business goals are our priority. We ensure customized strategies that align with your vision.</p>
+            </div>
+          </div><!-- End Card Item -->
+
+          <div class="col-lg-4" data-aos="fade-up" data-aos-delay="300">
+            <div class="card">
+              <img src="assets/img/values-3.png" class="img-fluid" alt="">
+              <h3>Proven Track Record</h3>
+              <p>From startups to enterprises, we’ve helped businesses scale with our reliable IT services.</p>
             </div>
           </div><!-- End Card Item -->
 
