--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Our Values</h2>
-        <p>Our Core Values<br></p>
+        <h2>Why Choose Us?</h2>
+        <p>Why Choose Us?<br></p>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -168,15 +168,17 @@
           <div class="col-lg-4" data-aos="fade-up" data-aos-delay="300">
             <div class="card">
               <img src="assets/img/values-3.png" class="img-fluid" alt="">
-              <h3>Proven Track Record</h3>
-              <p>From startups to enterprises, we’ve helped businesses scale with our reliable IT services.</p>
+              <h3>Innovative & Scalable Solutions</h3>
+              <p>Our services are designed for long-term growth, providing scalable IT solutions that evolve with your business.</p>
             </div>
           </div><!-- End Card Item -->
 
         </div>
 
       </div>
-
+      
+      <div><br></div>
+      
       <div class="container">
 
         <div class="row gy-4">
@@ -184,24 +186,24 @@
           <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
             <div class="card">
               <img src="assets/img/values-1.png" class="img-fluid" alt="">
-              <h3>Expertise Across Platforms</h3>
-              <p>We specialize in WordPress, Shopify, Wix, and custom development, delivering tailored solutions for every need.</p>
+              <h3>SEO & Performance Optimization</h3>
+              <p>We integrate best SEO practices and high-speed optimization to ensure your digital presence ranks at the top.</p>
             </div>
           </div><!-- End Card Item -->
 
           <div class="col-lg-4" data-aos="fade-up" data-aos-delay="200">
             <div class="card">
               <img src="assets/img/values-2.png" class="img-fluid" alt="">
-              <h3>Client-Centric Approach</h3>
-              <p>Your business goals are our priority. We ensure customized strategies that align with your vision.</p>
+              <h3>Dedicated Support & Maintenance</h3>
+              <p>We offer 24/7 technical support, continuous monitoring, and maintenance for a seamless experience.</p>
             </div>
           </div><!-- End Card Item -->
 
           <div class="col-lg-4" data-aos="fade-up" data-aos-delay="300">
             <div class="card">
               <img src="assets/img/values-3.png" class="img-fluid" alt="">
-              <h3>Proven Track Record</h3>
-              <p>From startups to enterprises, we’ve helped businesses scale with our reliable IT services.</p>
+              <h3>Proven Track Record of Success</h3>
+              <p>With successful projects across industries, we have built a reputation for delivering results-driven digital solutions.</p>
             </div>
           </div><!-- End Card Item -->
 
