--- a/index.html
+++ b/index.html
@@ -271,8 +271,8 @@
 
       <!-- Section Title -->
     <div class="container section-title" data-aos="fade-up">
-        <h2>Features</h2>
-        <p>Our Advacedd Features<br></p>
+        <h2>Our Values</h2>
+        <p>Our Core Values<br></p>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -338,7 +338,7 @@
     </section><!-- /Features Section -->
 
     <!-- Alt Features Section -->
-   <!-- <section id="alt-features" class="alt-features section">
+   <section id="alt-features" class="alt-features section">
 
       <div class="container">
 
@@ -356,7 +356,7 @@
                 </div>
               </div><!-- End Feature Item -->
 
-     <!--         <div class="col-md-6 icon-box">
+          <div class="col-md-6 icon-box">
                 <i class="bi bi-card-checklist"></i>
                 <div>
                   <h4>Ullamco laboris nisi</h4>
@@ -364,7 +364,7 @@
                 </div>
               </div><!-- End Feature Item -->
 
-  <!--            <div class="col-md-6 icon-box">
+           <div class="col-md-6 icon-box">
                 <i class="bi bi-dribbble"></i>
                 <div>
                   <h4>Labore consequatur</h4>
@@ -372,7 +372,7 @@
                 </div>
               </div><!-- End Feature Item -->
 
-  <!--            <div class="col-md-6 icon-box">
+          <div class="col-md-6 icon-box">
                 <i class="bi bi-filter-circle"></i>
                 <div>
                   <h4>Beatae veritatis</h4>
@@ -380,7 +380,7 @@
                 </div>
               </div><!-- End Feature Item -->
 
-  <!--            <div class="col-md-6 icon-box">
+            <div class="col-md-6 icon-box">
                 <i class="bi bi-lightning-charge"></i>
                 <div>
                   <h4>Molestiae dolor</h4>
@@ -388,7 +388,7 @@
                 </div>
               </div><!-- End Feature Item -->
 
-    <!--          <div class="col-md-6 icon-box">
+          <div class="col-md-6 icon-box">
                 <i class="bi bi-patch-check"></i>
                 <div>
                   <h4>Explicabo consectetur</h4>
@@ -396,7 +396,7 @@
                 </div>
               </div><!-- End Feature Item -->
 
- <!--           </div>
+       </div>
 
           </div>
 
