--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
         <p>Our Core Values<br></p>
       </div><!-- End Section Title -->
 
-      <div class="container">
+<!--      <div class="container">
 
         <div class="row gy-5">
 
@@ -293,42 +293,42 @@
                 </div>
               </div><!-- End Feature Item -->
 
-          <div class="col-md-6" data-aos="fade-up" data-aos-delay="300">
+<!--          <div class="col-md-6" data-aos="fade-up" data-aos-delay="300">
                 <div class="feature-box d-flex align-items-center">
                   <i class="bi bi-check"></i>
                   <h3>Facilis neque ipsa</h3>
                 </div>
               </div><!-- End Feature Item -->
 
-           <div class="col-md-6" data-aos="fade-up" data-aos-delay="400">
+<!--           <div class="col-md-6" data-aos="fade-up" data-aos-delay="400">
                 <div class="feature-box d-flex align-items-center">
                   <i class="bi bi-check"></i>
                   <h3>Volup amet volupt</h3>
                 </div>
               </div><!-- End Feature Item -->
 
-         <div class="col-md-6" data-aos="fade-up" data-aos-delay="500">
+<!--         <div class="col-md-6" data-aos="fade-up" data-aos-delay="500">
                 <div class="feature-box d-flex align-items-center">
                   <i class="bi bi-check"></i>
                   <h3>Rerum omnis sint</h3>
                 </div>
               </div><!-- End Feature Item -->
 
-         <div class="col-md-6" data-aos="fade-up" data-aos-delay="600">
+<!--         <div class="col-md-6" data-aos="fade-up" data-aos-delay="600">
                 <div class="feature-box d-flex align-items-center">
                   <i class="bi bi-check"></i>
                   <h3>Alias possimus</h3>
                 </div>
               </div><!-- End Feature Item -->
 
-             <div class="col-md-6" data-aos="fade-up" data-aos-delay="700">
+<!--             <div class="col-md-6" data-aos="fade-up" data-aos-delay="700">
                 <div class="feature-box d-flex align-items-center">
                   <i class="bi bi-check"></i>
                   <h3>Repellendus molli</h3>
                 </div>
               </div><!-- End Feature Item -->
 
-            </div>
+<!--            </div>
           </div>
 
         </div>
@@ -351,48 +351,48 @@
               <div class="col-md-6 icon-box">
                 <i class="bi bi-award"></i>
                 <div>
-                  <h4>Corporis voluptates sit</h4>
-                  <p>Consequuntur sunt aut quasi enim aliquam quae harum pariatur laboris nisi ut aliquip</p>
+                  <h4>Customer First</h4>
+                  <p>We believe in understanding and prioritizing client needs to deliver impactful solutions.</p>
                 </div>
               </div><!-- End Feature Item -->
 
           <div class="col-md-6 icon-box">
                 <i class="bi bi-card-checklist"></i>
                 <div>
-                  <h4>Ullamco laboris nisi</h4>
-                  <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt</p>
+                  <h4>Integrity & Transparency</h4>
+                  <p>Honesty and clear communication define how we work with our clients and partners.</p>
                 </div>
               </div><!-- End Feature Item -->
 
            <div class="col-md-6 icon-box">
                 <i class="bi bi-dribbble"></i>
                 <div>
-                  <h4>Labore consequatur</h4>
-                  <p>Aut suscipit aut cum nemo deleniti aut omnis. Doloribus ut maiores omnis facere</p>
+                  <h4>Innovation & Excellence</h4>
+                  <p>We continuously explore cutting-edge technology to offer the most effective IT solutions.</p>
                 </div>
               </div><!-- End Feature Item -->
 
           <div class="col-md-6 icon-box">
                 <i class="bi bi-filter-circle"></i>
                 <div>
-                  <h4>Beatae veritatis</h4>
-                  <p>Expedita veritatis consequuntur nihil tempore laudantium vitae denat pacta</p>
+                  <h4>Collaboration & Teamwork</h4>
+                  <p>Success comes from seamless collaboration, both within our team and with our clients.</p>
                 </div>
               </div><!-- End Feature Item -->
 
             <div class="col-md-6 icon-box">
                 <i class="bi bi-lightning-charge"></i>
                 <div>
-                  <h4>Molestiae dolor</h4>
-                  <p>Et fuga et deserunt et enim. Dolorem architecto ratione tensa raptor marte</p>
+                  <h4>Quality & Performance</h4>
+                  <p>We focus on delivering high-quality, result-oriented solutions that drive business growth.</p>
                 </div>
               </div><!-- End Feature Item -->
 
           <div class="col-md-6 icon-box">
                 <i class="bi bi-patch-check"></i>
                 <div>
-                  <h4>Explicabo consectetur</h4>
-                  <p>Est autem dicta beatae suscipit. Sint veritatis et sit quasi ab aut inventore</p>
+                  <h4>Commitment to Growth</h4>
+                  <p>Our goal is to help businesses scale, ensuring sustainable success in the digital space.</p>
                 </div>
               </div><!-- End Feature Item -->
 
