--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>BizzNist | Website & App Development | SEO & Digital Marketing Services</title>
+  <title>BizzNist | IT Solutions, Website Development & Digital Services</title>
   <meta name="description" content="BizzNist provides expert website development, app development, SEO, digital marketing, and advertisement management services. Get high-performance websites & apps built for your business success.">
   <meta name="keywords" content="website development services, app development company, best SEO agency, digital marketing services, WordPress development, Shopify experts, business website design, mobile app testing, PPC management, IT services, advertisement management, BizzNist">
 
@@ -52,7 +52,7 @@
           <li><a href="/" class="active">Home<br></a></li>
           <li><a href="#about">About</a></li>
           <!--<li><a href="#team">Team</a></li> -->
-          <li><a href="https://gyaansaar.bizznist.com/knowledge-base">Blog</a></li>
+          <li><a href="https://gyaansaar.bizznist.com/knowledge-base">Knowledge Base</a></li>
           <li class="dropdown"><a href="#services"><span>Services</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
               <li class="dropdown"><a href="/services/website-development"><span>Website Development</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
@@ -90,10 +90,10 @@
       <div class="container">
         <div class="row gy-4">
           <div class="col-lg-6 order-2 order-lg-1 d-flex flex-column justify-content-center">
-            <h1 data-aos="fade-up">Transforming Your Digital Presence with Expert IT Solutions</h1>
-            <p data-aos="fade-up" data-aos-delay="100">Comprehensive services tailored to your business needs.</p>
+            <h1 data-aos="fade-up">Empowering Businesses with Cutting-Edge IT Solutions</h1>
+            <p data-aos="fade-up" data-aos-delay="100">From website development, advertisement management to SEO and app solutions, we drive your business to success.</p>
             <div class="d-flex flex-column flex-md-row" data-aos="fade-up" data-aos-delay="200">
-              <a href="#services" class="btn-get-started">Explore Services <i class="bi bi-arrow-right"></i></a>
+              <a href="#contact" class="btn-get-started">Get a Free Quote<i class="bi bi-arrow-right"></i></a>
               <!-- <a href="https://www.youtube.com/watch?v=Y7f98aduVJ8" class="glightbox btn-watch-video d-flex align-items-center justify-content-center ms-0 ms-md-4 mt-4 mt-md-0"><i class="bi bi-play-circle"></i><span>Watch Video</span></a> -->
             </div>
           </div>
@@ -114,13 +114,13 @@
           <div class="col-lg-6 d-flex flex-column justify-content-center" data-aos="fade-up" data-aos-delay="200">
             <div class="content">
               <h3>Who We Are</h3>
-              <h2>Expertise in: Website & App Development | SEO & Ads Management | UI/UX & Testing</h2>
+              <h2>Your Trusted IT Partner for Growth</h2>
               <p>
-                At BizzNist, we are a team of IT experts dedicated to transforming businesses with website development, mobile app solutions, SEO, and digital marketing. Whether you're a startup or an established brand, we provide scalable, high-performance solutions to help you grow online.
+                With years of experience in web, app development, and digital marketing, we craft IT solutions that fuel business success.
               </p>
               <div class="text-center text-lg-start">
-                <a href="/about-us" class="btn-read-more d-inline-flex align-items-center justify-content-center align-self-center">
-                  <span>Read More</span>
+                <a href="#services" class="btn-read-more d-inline-flex align-items-center justify-content-center align-self-center">
+                  <span>Explore Our Services</span>
                   <i class="bi bi-arrow-right"></i>
                 </a>
               </div>
@@ -142,7 +142,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Why Choose Us?</h2>
-        <p>Why Choose Us?<br></p>
+        <p>Why Businesses Trust BizzNist<br></p>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -152,8 +152,8 @@
           <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
             <div class="card">
               <img src="assets/img/values-1.png" class="img-fluid" alt="">
-              <h3>Expertise Across Platforms</h3>
-              <p>We specialize in WordPress, Shopify, Wix, and custom development, delivering tailored solutions for every need.</p>
+              <h3>Customized Solutions</h3>
+              <p>Tailored IT strategies for every business.</p>
             </div>
           </div><!-- End Card Item -->
 
@@ -202,7 +202,7 @@
           <div class="col-lg-4" data-aos="fade-up" data-aos-delay="300">
             <div class="card">
               <img src="assets/img/values-3.png" class="img-fluid" alt="">
-              <h3>Proven Track Record of Success</h3>
+              <h3>Proven Results</h3>
               <p>With successful projects across industries, we have built a reputation for delivering results-driven digital solutions.</p>
             </div>
           </div><!-- End Card Item -->
@@ -415,8 +415,8 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Services</h2>
-        <p>Our Services<br></p>
+        <h2>Our Services</h2>
+        <p>Comprehensive IT Services to Elevate Your Business<br></p>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -665,7 +665,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Testimonials</h2>
-        <p>What they are saying about us<br></p>
+        <p>Our Clients Love Working With Us<br></p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -704,12 +704,12 @@
                   <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
                 </div>
                 <p>
-                  Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
+                  Professional and reliable service. Highly recommended!
                 </p>
                 <div class="profile mt-auto">
                   <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
-                  <h3>Saul Goodman</h3>
-                  <h4>Ceo &amp; Founder</h4>
+                  <h3>Own Properties</h3>
+                  <h4>CEO &amp; Founder</h4>
                 </div>
               </div>
             </div><!-- End testimonial item -->
@@ -720,12 +720,12 @@
                   <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
                 </div>
                 <p>
-                  Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.
+                  BizzNist transformed our website and boosted our sales by 40%!
                 </p>
                 <div class="profile mt-auto">
                   <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
-                  <h3>Sara Wilsson</h3>
-                  <h4>Designer</h4>
+                  <h3>AloeAura</h3>
+                  <h4>Founder</h4>
                 </div>
               </div>
             </div><!-- End testimonial item -->
@@ -854,7 +854,7 @@
       <!-- Section Title -->
       <div class="container section-title aos-init aos-animate" data-aos="fade-up">
         <h2>Recent Posts</h2>
-        <p>Recent posts form our Blog</p>
+        <p>Stay Ahead with Industry Insights</p>
       </div><!-- End Section Title -->
 
       <div class="container">
